Prevent select text from overlapping dropdown icon

--- a/share/spice/currency/currency.css
+++ b/share/spice/currency/currency.css
@@ -69,7 +69,19 @@
 
 .zci--currency .frm--bottom .frm__select select {
     height: 3em !important;
-    padding-right: 1.5em;
+}
+
+.zci--currency .frm__select:after {
+    height: 100%;
+    width: 30px;
+    margin-top: 0;
+    padding-top: 1.4em;
+    top: 0;
+    right: 0;
+    background-color: #fafafa;
+}
+.zci--currency .frm__select:hover:after {
+    background-color: #fff;
 }
 
 .zci--currency .equals-sign {
